--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>alura+</title>
+    <link rel="stylesheet" href="style.css" > 
+</head>
 <body>
-
-    <head>
-
-        <link rel="stylesheet" href="styles.css" />
-
-        <title> musica orochi </title>
-
-    </head>
-
-    <header>laisxz</header>
+ <section class=" principal conteiner">
     <div>
+        <h1 class=" container_titulo"> Com o Combo+, você pode aproveitar a Alura+ e o Alura Lígua por um preço único.</h1>
+        <img src="img/Combo.png" alt="">
 
-        <h1>Orochi - Até de Manhã</h1>
-        <p>musica
-        <p>
+    </div>
+ </section>
+ 
 
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7xmeiUoHfBM?si=V6m4pb7xIhzdf16_"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-</body>
-
+ </body>
 </html>
